# libp2p-experiment

./: .env  .gitignore  README.md  docker-compose.yaml  go.mod  go.sum  swarm.key
Libposemesh/: AnyDomainData.go  AnyMsg.go  AuthDomainReq.go  BasicNode.go  Domain.go  DomainData.go  DomainDataList.go  DomainServer.go  DownloadDomainData.go  DownloadDomainDataReq.go  DownloadDomainDataResp.go  Error.go  GenericDomainData.go  Image.go  Job.go  Msg.go  Node.go  NodeInfo.go  Partition.go  Peer.go  Portal.go  Pose.go  UploadDomainData.go  UploadDomainDataReq.go
config/: config.go
example/adam/: main.go
example/app/: main.go
example/cbd/: main.go
example/data_node/: main.go
example/discovery_node/: README.md  main.go
example/dmt/: main.go
example/domain_ochestrator/: package-lock.json  package.json  tsconfig.json
example/domain_ochestrator/src/: App.css  App.tsx  NodeTable.tsx  index.tsx
example/domain_ochestrator/src/libp2p/: libp2p.ts
example/domain_service/: main.go
example/holepunching/: README.md
example/holepunching/dialer/: main.go
example/holepunching/pnode/: main.go
example/holepunching/relay/: main.go
example/mdns/: README.md  main.go
example/refinement/: main.py
example/salvia/: main.go
example/thc/: main.go
example/thc/whereable/: camera_recorder.py
job/: job.go
models/: domain.go
node/: adam_node.go  app.go  callback.go  data_node.go  dds.go  dmt.go  ids.go  libp2p.go  multiaddress.go  peer.go
node/ADAM.app/Contents/: Info.plist
node/ADAM.app/Contents/Frameworks/: libMonoPosixHelper.dylib  libmono-native.dylib
node/ADAM.app/Contents/MacOS/: Auki Domain Assets Maker
node/ADAM.app/Contents/PlugIns/: lib_burst_generated.bundle
node/ADAM.app/Contents/PlugIns/ProcessStart.bundle/Contents/MacOS/: ProcessStart
node/ADAM.app/Contents/Resources/: PlayerIcon.icns
node/ADAM.app/Contents/Resources/Data/: RuntimeInitializeOnLoads.json  ScriptingAssemblies.json  app.info  boot.config  globalgamemanagers  globalgamemanagers.assets  globalgamemanagers.assets.resS  level0  resources.assets  sharedassets0.assets  sharedassets0.assets.resS
node/ADAM.app/Contents/Resources/Data/Resources/: unity_builtin_extra
node/ADAM.app/Contents/_CodeSignature/: CodeResources
rust-libp2p/: Cargo.toml  README.md  build.rs
rust-libp2p/src/: lib.rs  main.rs
schema/: domain.fbs  domain_data.fbs  message.fbs  node.fbs
test/: flatbuffers_test.go
utils/: domain_cluster.go  domain_data.go  frame.go  job.go  ping.go
