[package]
name = "rust-libp2p"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.30"
lazy_static = "1.5.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cxx = "1.0.128"
libp2p = { git = "https://github.com/libp2p/rust-libp2p.git", rev = "8ceadaa", features = [ "tokio", "gossipsub", "mdns", "noise", "macros", "tcp", "yamux", "quic"] }
libp2p-webrtc = { version = "0.8.0-alpha", features = ["tokio"] }
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
rand = "0.8.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
libp2p = { git = "https://github.com/libp2p/rust-libp2p.git", rev = "8ceadaa", features = [ "wasm-bindgen", "gossipsub", "macros" ] }
libp2p-webrtc-websys = { git = "https://github.com/libp2p/rust-libp2p.git", rev = "8ceadaa" }
tracing-wasm = "0.2.1"
wasm-bindgen = "0.2.90"
wasm-bindgen-futures = "0.4.42"

[build-dependencies]
cxx-build = "1.0.128"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.43"
